substantial update and reorg

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -5,9 +5,8 @@
 API & Application Programming Interface \\\hline
 AURA & Association of Universities for Research in Astronomy \\\hline
 AWS & Amazon Web Services \\\hline
-Butler & A middleware component for persisting and retrieving image datasets (raw or processed), calibration reference data, and catalogs. \\\hline
 CAOM & Common Archive Observation Model \\\hline
-CI & Continuous Integration \\\hline
+CI & Cyber Infrastructure \\\hline
 CRUD & Create Retrieve Update and Destroy \\\hline
 CSV & Comma Separated Values \\\hline
 Center & An entity managed by AURA that is responsible for execution of a federally funded project \\\hline
@@ -22,7 +21,6 @@ HTC & High Throughput Computing \\\hline
 IRAF & Image Reduction and Analysis Facility \\\hline
 JSON & JavaScript Object Notation \\\hline
 LSST & Large Synoptic Survey Telescope \\\hline
-Object & In LSST nomenclature this refers to an astronomical object, such as a star, galaxy, or other physical entity. E.g., comets, asteroids are also Objects but typically called a Moving Object or a Solar System Object (SSObject). One of the DRP data products is a table of Objects detected by LSST which can be static, or change brightness or position with time. \\\hline
 POSIX & Portable Operating System Interface \\\hline
 algorithm & A computational implementation of a calculation or some method of processing. \\\hline
 metadata & General term for data about data, e.g., attributes of astronomical objects (e.g. images, sources, astroObjects, etc.) that are characteristics of the objects themselves, and facilitate the organization, preservation, and query of data sets. (E.g., a FITS header contains metadata). \\\hline
