--- a/authors.tex
+++ b/authors.tex
@@ -8,3 +8,5 @@
 \affiliation{Large Synoptic Survey Telescope (LSST/AURA)}
 \author{Arfon~M.~Smith.}
 \affiliation{Space Telescope Science Institute}
+\author{J.~Ross~Thomson.}
+\affiliation{Google}
