Add Tim Jenness as author

--- a/authors.tex
+++ b/authors.tex
@@ -4,9 +4,11 @@
 \affiliation{Large Synoptic Survey Telescope (LSST/AURA)}
 \author{Niall~Gaffney}
 \affiliation{Texas Advanced Computing Center}
-\author{Frossie~Economou.}
+\author{Frossie~Economou}
 \affiliation{Large Synoptic Survey Telescope (LSST/AURA)}
-\author{Arfon~M.~Smith.}
+\author{Arfon~M.~Smith}
 \affiliation{Space Telescope Science Institute}
-\author{J.~Ross~Thomson.}
+\author{J.~Ross~Thomson}
 \affiliation{Google}
+\author{Tim~Jenness}
+\affiliation{Large Synoptic Survey Telescope (LSST/AURA)}
