--- a/abstract.tex
+++ b/abstract.tex
@@ -3,6 +3,6 @@
 %should be 350 chars
 \begin{abstract}
 Many astronomy data centres still work on filesystems.
-Industry has moved on;  current practice in  computing infrastructure is to achieve Big Data scalability using  object stores rather than Posix file systems. This presents us with  opportunities  for portability and reuse of software underlying processing and archive  systems  but it also causes problems for legacy implementations in current data centers.
+Industry has moved on;  current practice in  computing infrastructure is to achieve Big Data scalability using  object stores rather than POSIX file systems. This presents us with  opportunities  for portability and reuse of software underlying processing and archive  systems  but it also causes problems for legacy implementations in current data centers.
 
 \end{abstract}
