Cite an ADASS paper on file formats

--- a/body.tex
+++ b/body.tex
@@ -117,7 +117,7 @@ The rest of the world has already moved on,  Google, Amazon, GitHub, Netflix etc
 
 Filesystems with name spaces are very fragile at large scale. As we get larger data sets we have to trick the filesystem to not run out of Inodes, we make countless sub directories to cope with our thousands of files.
 This is turn leads to countless hours spent fighting over how to organize files  the \emph{right way} in a filesystem.
-Countless years have been spent fighting over data formats (\gls{FITS} vs \gls{HDF} vs \gls{CSV} vs Pandas).
+Countless years have been spent fighting over data formats (\gls{FITS} vs \gls{HDF} \citep{2015ASPC..495...11M} vs \gls{CSV} vs Pandas).
 If we move code then perhaps the filesystem is not organised in the same manner and the code may not work --- remote access to allow caching is not always an option.
 
 We need to foster better remote collaboration.  The laptop is the bane of file sharing.
