--- a/local.bib
+++ b/local.bib
@@ -22,3 +22,22 @@ author = {Adam Brinckman and Kyle Chard and Niall Gaffney and Mihael Hategan and
 keywords = {Living publications, Reproducibility, Provenance, Data sharing, Code sharing},
 abstract = {The act of sharing scientific knowledge is rapidly evolving away from traditional articles and presentations to the delivery of executable objects that integrate the data and computational details (e.g., scripts and workflows) upon which the findings rely. This envisioned coupling of data and process is essential to advancing science but faces technical and institutional barriers. The Whole Tale project aims to address these barriers by connecting computational, data-intensive research efforts with the larger research process—transforming the knowledge discovery and dissemination process into one where data products are united with research articles to create \"living publications\" or tales. The Whole Tale focuses on the full spectrum of science, empowering users in the long tail of science, and power users with demands for access to big data and compute resources. We report here on the design, architecture, and implementation of the Whole Tale environment.}
 }
+
+@INPROCEEDINGS{2015ASPC..495...11M,
+       author = {{Mink}, J. and {Mann}, R.~G. and {Hanisch}, R. and {Rots}, A. and
+         {Seaman}, R. and {Jenness}, T. and {Thomas}, B. and {O'Mullane}, W.},
+        title = "{The Past, Present, and Future of Astronomical Data Formats}",
+     keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+    booktitle = {Astronomical Data Analysis Software an Systems XXIV (ADASS XXIV)},
+         year = "2015",
+       editor = {{Taylor}, A.~R. and {Rosolowsky}, E.},
+       series = {Astronomical Society of the Pacific Conference Series},
+       volume = {495},
+        month = "Sep",
+        pages = {11},
+archivePrefix = {arXiv},
+       eprint = {1411.0996},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ASPC..495...11M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
