--- a/body.tex
+++ b/body.tex
@@ -24,9 +24,9 @@ have real time query driven structure for the file organization, removing how ma
 organize data through a sea of nested symlinks.
 Some provide local \gls{POSIX} caches of that users view of the
 pseudo-filesystem, allowing for \gls{POSIX} style applications to access the files with
-fopen, fscan, and fclose standard commands. Additionally, these providers do
+\texttt{fopen}, \texttt{fscan}, and \texttt{fclose} standard commands. Additionally, these providers do
 not show users how data are stored. One can simply request data in the format
-needed (e.g. Excel, \gls{CSV}, or as I assume it is the \gls{JSON} format the web apps
+needed (e.g., Excel, \gls{CSV}, or as I assume it is the \gls{JSON} format the web apps
 use for sheets).   At scale, applications often forgo
 such POSIX layers and simply use the \gls{CRUD} interfaces to the objects to load them into
 memory, act on the objects, and then update or delete them, in the format they need
@@ -60,7 +60,7 @@ depicted in \figref{fig:ci}.
 \item Develop \emph{data and \gls{metadata} transform services}
 to support these common \gls{API} layers to aid interoperation.
 
-\item Adopt and subscribe to a \emph{common federated identity service} (e.g. InCommon or
+\item Adopt and subscribe to a \emph{common federated identity service} (e.g., InCommon or
 Globus Auth) that is supported by most university and research organizations.
 \end{enumerate}
 
@@ -95,7 +95,7 @@ Alternatives such as using github authentication may be more flexible but lack t
  % tie -- I assume this was an error.
  rigor of InCommon which assures the individual is a member of an academic body --- we must also work with these industry standards though.
 
-This service architecture should be based on using standard reusable software from many of the established standards developed outside of astronomy (e.g. common authentication mechanisms such as CILogon, standard data and \gls{metadata} management systems).  Standard \gls{API} interfaces should also be used to expose these components to higher level \gls{API}s. Data
+This service architecture should be based on using standard reusable software from many of the established standards developed outside of astronomy (e.g., common authentication mechanisms such as CILogon, standard data and \gls{metadata} management systems).  Standard \gls{API} interfaces should also be used to expose these components to higher level \gls{API}s. Data
 formatting and \gls{metadata} structure can be exposed at the service level, allowing for
 more data and \gls{metadata} reuse.
  An example of a storage agnostic data/metadata layer is the \gls{LSST} data butler \citep{2018arXiv181208085J}. Creation  has been driven by the need to abstract data access away from algorithms.
@@ -105,7 +105,7 @@ The \gls{algorithm} code deals with Python objects and never directly with data 
 
 Part of a Cyber Infrastructure model such as depicted in \figref{fig:ci} is an object store oriented \gls{API} --- this should be used for data sharing. Such APIs exist such as Amazon's S3.
 The  \gls{API} layers must \emph{expose both data and \gls{metadata} in common
-transferable and transformable formats} (e.g. \gls{CAOM}).
+transferable and transformable formats} (e.g., \gls{CAOM}).
 
 
 There must also be an authentication source for users at institutions without such means and for citizen science efforts.
@@ -130,7 +130,7 @@ in software development} and only used when applications require thread safe
 data access (something that is currently not possible with \gls{FITS} files).
 We should however  develop a pseudo-directory structure system to
 integrate local and remote files into a dynamic namespace for each user and potentially
-each users use-case (e.g. the Box sync interface or the \gls{FUSE} based WholeTale file system
+each users use-case (e.g., the Box sync interface or the \gls{FUSE} based WholeTale file system
 \citep{BRINCKMAN2019854})
 
 This "Infrastructure as Code" \citep{morris2016infrastructure} approach lowers the bar to entry
@@ -145,6 +145,6 @@ Switching to an object store removes the filesystem bottle neck however it also 
 We should agree on an \emph{astronomy \gls{stack}} of services with agreed interfaces such that we can concentrate on building domain specific layers on top of industry standard tools.
 
 We should stop worrying about filesystems in astronomy --- we should agree on a decent \gls{API} for object storage and a registry to go with it.
-The registry should build on existing agreements i.e. based on \gls{CAOM}-2 \citep{2007ASPC..376..347D}.
+The registry should build on existing agreements i.e., based on \gls{CAOM}-2 \citep{2007ASPC..376..347D}.
 
 Adoption of  a limited set of  services will  aid ease of use and cut down on wasted effort by all data providers.
